test/fails/bad_parsing/bad_name2.lgl
void main() {
    int mat2x3 = 5;
}
